// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for Recombee's setViewPortionFromWatchTime destination action: all fields 1`] = `
Object {
  "additionalData": Object {
    "testType": "FcP0tLN]UE",
  },
  "cascadeCreate": true,
  "itemId": "FcP0tLN]UE",
  "portion": 1,
  "recommId": "FcP0tLN]UE",
  "sessionId": "FcP0tLN]UE",
  "timestamp": "FcP0tLN]UE",
  "userId": "FcP0tLN]UE",
}
`;

exports[`Testing snapshot for Recombee's setViewPortionFromWatchTime destination action: required fields 1`] = `
Object {
  "cascadeCreate": true,
  "itemId": "FcP0tLN]UE",
  "portion": 1,
  "userId": "FcP0tLN]UE",
}
`;
